[metadata]
name = cerber
home-page = https://github.com/gr0und-s3ct0r/cerber/
summary = Command line tool to generate secure computing mode
description-file = README.rst
author = gr0und-s3ct0r
author-email = contact@groundsector.com
licence = MIT
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    cerber

[extras]
test =
    fixtures
    tox

[entry_points]
console_scripts =
    cerber = cerber:main

[wheel]
universal = 1
